--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -221,6 +221,7 @@
 
 .popular-product__slider .slick-list {
 	padding-bottom: 5px;
+	margin-bottom: 30px;
 }
 /* ==========================================================================
   
