--- a/app/scss/blocks/detail.scss
+++ b/app/scss/blocks/detail.scss
@@ -87,6 +87,21 @@
 		}
 	}
 
+	&__content-popular {
+
+		@media (max-width: 1000px) {
+			margin: 0px 0px 30px 0px;
+		}
+
+		@media (max-width: 768px) {
+			margin: 0px 0px 20px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 15px 0px;
+		}
+	}
+
 	&__content-cart {
 		margin: 0px 0px 45px 0px;
 
