--- a/app/scss/components/comments.scss
+++ b/app/scss/components/comments.scss
@@ -32,6 +32,7 @@
 		}
 
 		&:nth-child(3) {
+			position: relative;
 			margin: 0px 0px 30px 110px;
 
 			@media (max-width: 768px) {
@@ -45,9 +46,34 @@
 			@media (max-width: 450px) {
 				margin: 0px 0px 15px 30px;
 			}
+
+			&::before {
+				position: absolute;
+				content: "";
+				background: url(../img/icons/down_right_50px.png);
+				background-repeat: no-repeat;
+				height: 35px;
+				width: 35px;
+				left: -75px;
+				top: 30px;
+
+				@media (max-width: 768px) {
+					left: -60px;
+					top: 20px;
+				}
+
+				@media (max-width: 550px) {
+					left: -50px;
+				}
+
+				@media (max-width: 480px) {
+					display: none;
+				}
+			}
 		}
 
 		&:nth-child(4) {
+			position: relative;
 			margin: 0px 0px 30px 230px;
 
 			@media (max-width: 768px) {
@@ -60,6 +86,30 @@
 
 			@media (max-width: 450px) {
 				margin: 0px 0px 15px 50px;
+			}
+
+			&::before {
+				position: absolute;
+				content: "";
+				background: url(../img/icons/down_right_50px.png);
+				background-repeat: no-repeat;
+				height: 35px;
+				width: 35px;
+				left: -75px;
+				top: 30px;
+
+				@media (max-width: 768px) {
+					left: -60px;
+					top: 20px;
+				}
+
+				@media (max-width: 550px) {
+					left: -50px;
+				}
+
+				@media (max-width: 480px) {
+					display: none;
+				}
 			}
 		}
 
