--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -6,19 +6,25 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		width: 40%;
+		height: 100vh;
+		padding: 80px 0px 0px 5px;
 		overflow: auto;
-		background-color: rgba(#000, .8);
-		transform: translateY(-100%);
+		background-color: rgba(#000, 1);
+		transform: translateX(-100%);
 		transition: transform 0.6s ease 0s;
 
 		&.menu.active {
-			transform: translateY(0%);
+			transform: translateX(0%);
 		}
+	}
+
+	@media (max-width: 600px) {
+		width: 60%;
+	}
+
+	@media (max-width: 480px) {
+		width: 100%;
 	}
 	// .menu__list
 
@@ -28,7 +34,8 @@
 		z-index: 3;
 
 		@media (max-width: 1060px) {
-			display: block;
+			flex-direction: column;
+			flex-basis: 100%;
 		}
 	}
 
@@ -37,6 +44,10 @@
 	&__item {
 		display: flex;
 		position: relative;
+
+		@media (max-width: 1000px) {
+			flex-direction: column;
+		}
 
 		&::before {
 			position: absolute;
@@ -72,9 +83,6 @@
 	&__item-search {
 		position: relative;
 		display: flex;
-
-
-
 	}
 
 	// .menu__link
@@ -102,6 +110,10 @@
 			color: #fff;
 		}
 
+		@media (max-width: 1000px) {
+			font-size: 22px;
+		}
+
 		@media (max-width: 600px) {
 			padding: 20px;
 			font-size: 22px;
@@ -114,6 +126,10 @@
 
 		&:hover {
 			color: #e12121;
+
+			@media (max-width: 1000px) {
+				color: #fff;
+			}
 		}
 	}
 
@@ -221,6 +237,10 @@
 		&:hover {
 			color: #e12121;
 			transform: translateX(10px);
+
+			@media (max-width: 1000px) {
+				color: #fff;
+			}
 		}
 	}
 
@@ -247,6 +267,30 @@
 		display: none;
 		background: #000;
 		border-top: 1px solid #e12121;
+
+		@media (max-width: 1000px) {
+			width: 100%;
+			position: relative;
+		}
+	}
+
+	&__item-dropdown {
+
+		@media (max-width: 1000px) {
+			display: none;
+		}
+	}
+
+	&__link-dropdown {
+
+		@media (max-width: 1000px) {
+			width: 100%;
+		
+			&.active {
+				color: #e12121;
+			}
+		}
+
 	}
 
 	&__dropdown-item  {
@@ -262,6 +306,10 @@
 
 	&__item:hover .menu__dropdown{
 		display: block;
+
+		@media (max-width: 1000px) {
+			display: none;
+		}
 	}
 
 	&__dropdown-link {
@@ -269,6 +317,10 @@
 		padding: 15px 30px;
 		font-weight: 400;
 		transition: color .3s ease, transform .3s ease;
+
+		@media (max-width: 1000px) {
+			width: 100%;
+		}
 
 		&:hover {
 			color: #fff;
