--- a/app/scss/components/accordion.scss
+++ b/app/scss/components/accordion.scss
@@ -24,7 +24,7 @@
 		background: $white;
 		padding: 10px 30px 10px 30px;
 		border-radius: 50px;
-		transition:all .2s linear 0;
+		transition: all .2s linear 0s;
 
 		&:after {
 			content: "\f107";
