--- a/app/scss/blocks/all-categories-grid.scss
+++ b/app/scss/blocks/all-categories-grid.scss
@@ -108,6 +108,14 @@
 		background: #fff;
 		padding: 20px 15px;
 
+		@media (max-width: 1000px) {
+			margin: 0px 0px 20px 0px;
+		}
+
+		@media (max-width: 480px) {
+			margin: 0px 0px 15px 0px;
+		}
+
 		.featured__slider-item {
 			padding: 0px;
 		}
