--- a/app/scss/components/sidebar-nav.scss
+++ b/app/scss/components/sidebar-nav.scss
@@ -15,6 +15,7 @@
 		@media (max-width: 1400px) {
 			margin: 0 20px 10px 20px;
 			padding: 20px 0px 15px;
+			font-size: 18px;
 		}
 
 		&--light {
