--- a/app/scss/blocks/featured.scss
+++ b/app/scss/blocks/featured.scss
@@ -21,13 +21,20 @@
 
 	&__slider{
 		margin: 0px -15px;
-
 		display: flex;
+
+		@media (max-width: 1300px) {
+			margin: 0px -10px;
+		}
 	} 
 
 	// .featured__slider-item
 
 	&__slider-item{
 		padding: 10px 15px 0 15px;
+
+		@media (max-width: 1300px) {
+			padding: 10px 10px 0 10px;
+		}
 	}
 }
