--- a/app/scss/components/perfect-product.scss
+++ b/app/scss/components/perfect-product.scss
@@ -37,6 +37,7 @@
 	&__column {
 		flex: 0 1 50%;
 		padding: 0px 20px;
+		display: flex;
 
 		@media (max-width: 1200px) {
 			padding: 0px 10px;
@@ -83,6 +84,8 @@
 
 	&__item-body {
 		padding: 0px 0px 0px 30px;
+		display: flex;
+		flex-direction: column;
 
 		@media (max-width: 1050px) {
 			padding: 0 0 0 15px;
@@ -120,6 +123,7 @@
 		font-size: 13px;
 		line-height: 22px;
 		margin: 0px 0px 30px 0px;
+		flex: 1 1 auto;
 
 		@media (max-width: 1100px) {
 			line-height: 16px;
