--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -73,7 +73,7 @@
 @import "components/tabs";
 @import "components/cart-detail";
 @import "components/quantity";
-
+@import "components/price-filter";
 /* ==========================================================================
   General Styles
 ========================================================================== */
