--- a/app/scss/blocks/featured.scss
+++ b/app/scss/blocks/featured.scss
@@ -20,21 +20,24 @@
 	// .featured__slider
 
 	&__slider{
-		margin: 0px -15px;
+		margin: -15px;
 		display: flex;
+		height: auto;
 
 		@media (max-width: 1300px) {
-			margin: 0px -10px;
+			margin: -10px;
 		}
 	} 
 
 	// .featured__slider-item
 
 	&__slider-item{
-		padding: 10px 15px 0 15px;
+		padding: 15px;
+		height: 100%;
 
 		@media (max-width: 1300px) {
-			padding: 10px 10px 0 10px;
-		}
+			padding: 10px;
+		}	
 	}
+
 }
