--- a/app/scss/blocks/information.scss
+++ b/app/scss/blocks/information.scss
@@ -352,3 +352,65 @@
 		}
 	}
 }
+
+/* ==========================================================================
+  information-page
+========================================================================== */
+.information-page {
+	padding: 30px 0px 0px 0px;
+
+	@media (max-width: 768px) {
+		padding: 15px 0px 0px 0px;
+	}
+	// .information-page__row
+
+	&__row {
+		display: flex;
+		flex-flow: row wrap;
+		margin: -15px;
+
+		@media (max-width: 1300px) {
+			margin: -10px;
+		}
+	}
+
+	// .information-page__column
+
+	&__column {
+		flex: 0 1 25%;
+		padding: 15px;
+
+		@media (max-width: 1300px) {
+			padding: 10px;
+		}
+
+		@media (max-width: 768px) {
+			flex: 0 1 50%;	
+		}
+
+		@media (max-width: 480px) {
+			flex: 0 1 100%;
+		}
+	}
+
+	// .information-page__item
+
+	&__item {
+		padding: 0px 0px 98% 0px;
+		overflow: hidden;
+		position: relative;
+
+		@media (max-width: 1400px) {
+			padding: 0px 0px 80% 0px;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+	}
+}
