--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -97,6 +97,7 @@
 	&__item {
 		position: relative;
 		display: flex;
+		width: 100%;
 		padding: 0px 30px 0px 0px;
 
 		@media (max-width: 1366px) {
