--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -194,7 +194,7 @@
 
 	&__body-price {
 		display: inline-block;
-		color: #e12020;
+		color: #7ED250;
 		font-weight: 600;
 		position: relative;
 		padding: 0px 0px 0px 5px;
@@ -208,6 +208,18 @@
 			left: 0;
 			top: 3px;
 			transition: background .3s;
+		}
+
+		span {
+			color: #e12020;
+			margin: 0px 0px 0px 6px;
+		}
+	}
+
+	&__body-price--old {
+		span {
+			text-decoration: line-through;
+			font-weight: 400;
 		}
 	}
 
