--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -170,7 +170,7 @@
 	&__submenu {
 		position: absolute;
 		left: 0;
-		top: 59px;
+		top: 100%;
 		width: 1000px;
 		padding: 25px;
 		z-index: 100;
@@ -179,7 +179,6 @@
 		border-top: 1px solid #e12121;
 
 		@media (max-width: 1265px) {
-			top: 57px;
 			left: -100px;
 			width: 900px;
 		}
