--- a/app/scss/components/sponsor.scss
+++ b/app/scss/components/sponsor.scss
@@ -17,6 +17,10 @@
 		@media (max-width: 768px) {
 			flex: 0 1 25%;
 		}
+
+		@media (max-width: 480px) {
+			flex: 0 1 50%;
+		}
 	}
 
 	&__title {
@@ -29,12 +33,15 @@
 	// .sponsor__item
 
 	&__item {
-		padding: 0px 0px 58% 0px;
+		padding: 0px 0px 67% 0px;
 		overflow: hidden;
 		position: relative;
+		
 
 		img {
+			width: 100%;
 			height: 100%;
+			object-fit: cover;
 			position: absolute;
 			top: 0;
 			left: 0;
