--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -23,6 +23,15 @@
 		height: 60px;
 		position: relative;
 	}
+	// .header__menu-inner
+
+	&__menu-inner {
+
+		@media (min-width: 1060px) {
+			flex: 1 1 auto;
+		}
+
+	}
 
 	// .header__logo
 
