--- a/app/scss/components/featured-product.scss
+++ b/app/scss/components/featured-product.scss
@@ -33,13 +33,13 @@
 			}
 		}
 
-		&:hover {
+		&:hover  {
 			color: #333333;
 		}
 	}
 
 	&__slider {
-		max-width: 1500px;
+		width: 100%;
 		margin: 0px -15px;
 
 		@media (max-width: 768px) {
