--- a/app/scss/components/price-filter.scss
+++ b/app/scss/components/price-filter.scss
@@ -1,10 +1,10 @@
 .price-filter {
-	margin: 0px 0px 30px 0px;
+	margin: 0px 0px 20px 0px;
 
 	&__slider {
 		height: 5px;
 		background-color: #DDDDDDFF;
-		margin: 0px 11px 28px;
+		margin: 0px 11px 8px;
 		position: relative;
 	
 		&::before,
@@ -68,7 +68,7 @@
 				left: 50%;
 				top: 50%;
 				transform: translate(-50%, -50%);
-				background-color: #FF5959FF;
+				background-color: #fff;
 				border-radius: 50%;
 			}
 		}
