--- a/app/scss/components/sidebar-nav.scss
+++ b/app/scss/components/sidebar-nav.scss
@@ -56,6 +56,13 @@
 				transform: translateX(10px);
 		  }
 
+		  .sidebar-nav__icon {
+
+				@media (max-width: 1000px) {
+					transform: rotate(270deg) translateX(-50%);
+				}
+		  }
+
 	  }
 
 	  	&--dark {
@@ -99,13 +106,18 @@
 		right: 20px;
 		top: 50%;
 		transform: translateY(-50%);
+		transition: transform .3s ease;
+
+		@media (max-width: 1000px) {
+			transform: rotate(90deg) translateX(-50%);
+		}
 	}
 
 	&__dropdown {
 		position: absolute;
 		top: -45px;
 		left: 100%;
-		z-index: 3;
+		z-index: 11;
 		width: 480px;
 		display: none;
 		padding: 30px;
@@ -113,8 +125,29 @@
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 		border-radius: 5px;
 
+		@media (max-width: 1000px) {
+			position: relative;
+			left: 0;
+			top: 100%;
+			width: 100%;
+			height: 100%;
+			border-radius: 0px;
+		}
+
+		@media (max-width: 800px) {
+			padding: 15px;
+		}
+
 		&--img {
 			padding: 30px 30px 240px 30px;
+
+			@media (max-width: 800px) {
+				padding: 15px 15px 190px 15px;
+			}
+
+			@media (max-width: 560px) {
+				padding: 30px 30px 240px 30px;
+			}
 		}
 	}
 
@@ -131,11 +164,19 @@
 	&__dropdown-row {
 		display: flex;
 		margin: 0px -25px;
+
+		@media (max-width: 800px) {
+			margin: 0px -15px;
+		}
 	}
 
 	&__dropdown-column {
 		flex: 0 1 50%;
 		padding: 0px 25px;
+
+		@media (max-width: 800px) {
+			padding: 0px 15px;
+		}
 	}
 
 	&__dropdown-item  {
